update groupId & doc