@@ -2,10 +2,38 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>dawdler</groupId>
+	<groupId>io.github.dawdler-series</groupId>
 	<artifactId>dawdler</artifactId>
 	<version>17.2-jdk17-RELEASES</version>
 	<name>dawdler</name>
+	<description>Micro service solutions</description>
+	<url>https://github.com/srchen1987/dawdler-series</url>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>srchen1987</id>
+			<name>srchen1987</name>
+			<email>suxuan696@gmail.com</email>
+			<roles>
+				<role>Project Manager</role>
+				<role>Architect</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>https://github.com/srchen1987/dawdler-series.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:srchen1987/dawdler-series.git</developerConnection>
+		<url>https://github.com/srchen1987/dawdler-series</url>
+	</scm>
+
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -45,6 +73,7 @@
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
 		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
 		<versions-maven-plugin.version>2.3</versions-maven-plugin.version>
+		<serverId>dawdler-series</serverId>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -194,232 +223,232 @@
 				<version>${mybatis.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-session</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-web</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-load</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-validator</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-service-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-mybatis-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-db-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-remote-service</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-local-service</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-local-service-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-remote-service-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-db</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-mybatis</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-dao</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-util</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-load-bean</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-velocity</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-serialization</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-jedis-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-jedis</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-jedis</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-rabbitmq-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-rabbitmq</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-rabbitmq</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-es-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-es</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-es</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-schedule-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-schedule</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-schedule</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-distributed-transaction-api</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-distributed-transaction-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-distributed-transaction-compensator</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-jakarta-fileupload</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-discovery-center-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-discovery-center-zookeeper</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-discovery-center-zookeeper-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-discovery-center-zookeeper</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-discovery-center-zookeeper</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-discovery-center-consul-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-discovery-center-server-plug</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-discovery-center-consul</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-discovery-center-consul</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
@@ -454,57 +483,57 @@
 				<version>${gson.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-config-center-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-config-center-consul-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-client-plug-config-center-consul</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-config-center-consul</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-cache-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-cache-caffeine</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-cache-jedis</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-circuit-breaker</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-local-service</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-server-plug-remote-service</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dawdler</groupId>
+				<groupId>io.github.dawdler-series</groupId>
 				<artifactId>dawdler-dao-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
@@ -551,8 +580,60 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>${serverId}</id>
+			<url>https://central.sonatype.com/</url>
+		</snapshotRepository>
+	</distributionManagement>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<version>0.4.0</version>
+				<extensions>true</extensions>
+				<configuration>
+					<publishingServerId>${serverId}</publishingServerId>
+					<tokenAuth>true</tokenAuth>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.6.3</version>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+					<source>17</source>
+					<target>17</target>
+					<additionalJOptions>
+						<additionalJOption>--add-exports=java.base/jdk.internal.loader=dawdler.util</additionalJOption>
+						<additionalJOption>-X</additionalJOption>
+					</additionalJOptions>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -582,7 +663,8 @@
 			</plugin>
 			<plugin>
 				<!-- -N versions:update-child-modules -->
-				<!--mvn versions:set -DnewVersion=0.0.3-RELEASES-->
+				<!--mvn
+				versions:set -DnewVersion=0.0.3-RELEASES-->
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>${versions-maven-plugin.version}</version>
